@@ -3,6 +3,9 @@ What's New in IDLE 1.2a0?
 
 *Release date: XX-XXX-2005*
 
+- If an extension can't be loaded, print warning and skip it instead of
+  erroring out.
+
 - The GUI was hanging if the shell window was closed while a raw_input() 
   was pending.  Restored the quit() of the readline() mainloop().
   http://mail.python.org/pipermail/idle-dev/2004-December/002307.html
@@ -142,7 +145,7 @@ What's New in IDLE 1.0?
 
 *Release date: 29-Jul-2003*
 
-- Added a banner to the shell discussimg warnings possibly raised by personal
+- Added a banner to the shell discussing warnings possibly raised by personal
   firewall software.  Added same comment to README.txt.
 
 
